Updated ScheduleAPI and ScheduleController
