# backend/src/main/java/de/goaldone/backend/controller/ScheduleController.java
@@ -1,25 +1,42 @@
 package de.goaldone.backend.controller;
 
+import de.goaldone.backend.api.SchedulesApi;
 import de.goaldone.backend.model.GenerateScheduleRequest;
 import de.goaldone.backend.model.ScheduleResponse;
 import de.goaldone.backend.service.ScheduleService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.List;
+import java.time.LocalDate;
 import java.util.UUID;
+
 
 @RestController
 @RequiredArgsConstructor
-public class ScheduleController extends BaseController {
+public class ScheduleController implements SchedulesApi {
 
     private final ScheduleService scheduleService;
 
-    public ResponseEntity<ScheduleResponse> generateSchedule(GenerateScheduleRequest generateScheduleRequest) {
-        return ResponseEntity.ok(scheduleService.generateSchedule(
-                generateScheduleRequest.getGoaldoneUserId(),
-                generateScheduleRequest.getAccountIds()
-        ));
+
+    @Override
+    public ResponseEntity<ScheduleResponse> generateAllAccountsSchedule(GenerateScheduleRequest generateScheduleRequest) throws Exception {
+        return ResponseEntity.status(HttpStatus.NOT_IMPLEMENTED).build();
+    }
+
+    @Override
+    public ResponseEntity<ScheduleResponse> generateSingleAccountSchedule(UUID accountId, GenerateScheduleRequest generateScheduleRequest) throws Exception {
+        return ResponseEntity.status(HttpStatus.NOT_IMPLEMENTED).build();
+    }
+
+    @Override
+    public ResponseEntity<ScheduleResponse> getAllAccountsSchedule(LocalDate from, LocalDate to) throws Exception {
+        return ResponseEntity.status(HttpStatus.NOT_IMPLEMENTED).build();
+    }
+
+    @Override
+    public ResponseEntity<ScheduleResponse> getSingleAccountSchedule(LocalDate from, LocalDate to, UUID accountId) throws Exception {
+        return ResponseEntity.status(HttpStatus.NOT_IMPLEMENTED).build();
     }
 }
